--- a/index.css
+++ b/index.css
@@ -211,9 +211,10 @@ body{
   margin-bottom: 20px;
 }
 form .row label{
-  font-size: 18px;
+  font-size: 20px;
+  font:bold;
   display: block;
-  margin-bottom: 6px;
+  margin-bottom: 10px;
 }
 form :where(input, textarea){
   height: 50px;
@@ -221,7 +222,7 @@ form :where(input, textarea){
   outline: none;
   font-size: 17px;
   padding: 0 15px;
-  border-radius: 4px;
+  border-radius: 6px;
   border: 1px solid black;
 }
 form :where(input, textarea):focus{
@@ -235,13 +236,13 @@ form .row textarea{
 form button{
   width: 100%;
   height: 50px;
-  color: bisque;
+  color: khaki;
   outline: none;
   border: none;
   cursor: pointer;
   font-size: 17px;
   border-radius: 4px;
-  background: blue
+  background: blue;
 }
 
 @media (max-width: 660px){
