--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,9 @@
               <label>DESCRIPTION: </label>
               <textarea id="descriptionInput" spellcheck="false" name="description"></textarea>
             </div>
-            <div class="row summarize">
+            <div class="row summary">
               <label>SUMMARIZED: </label>
-              <textarea spellcheck="false" name="summarize"></textarea>
+              <textarea id="summarizedOutput" spellcheck="false" name="summary"></textarea>
             </div>
             <button type="submit">ADD</button>
           </form>
