--- a/static/index.css
+++ b/static/index.css
@@ -69,24 +69,7 @@
   max-height: 165px;
   overflow-y: auto;
 }
-.note .details::-webkit-scrollbar,
-.popup textarea::-webkit-scrollbar{
-  width: 0;
-}
-.note .details:hover::-webkit-scrollbar,
-.popup textarea:hover::-webkit-scrollbar{
-  width: 5px;
-}
-.note .details:hover::-webkit-scrollbar-track,
-.popup textarea:hover::-webkit-scrollbar-track{
-  background: skyblue;
-  border-radius: 25px;
-}
-.note .details:hover::-webkit-scrollbar-thumb,
-.popup textarea:hover::-webkit-scrollbar-thumb{
-  background: skyblue;
-  border-radius: 25px;
-}
+
 .note p{
   font-size: 22px;
   font-weight: 500;
@@ -164,7 +147,8 @@
   left: 50%;
   z-index: 3;
   width: 100%;
-  max-width: 400px;
+  height: fit-content;
+  max-width: 1000px;
   justify-content: center;
   transform: translate(-50%, -50%) scale(0.95);
 }
@@ -182,7 +166,7 @@
 }
 .popup .content{
   border-radius: 5px;
-  background: beige;
+  background-color:seashell;
   width: calc(100% - 15px);
   box-shadow: 0 0 15px rgba(0,0,0,0.1);
 }
@@ -231,13 +215,13 @@ form .row textarea{
 form button{
   width: 100%;
   height: 50px;
-  color: khaki;
+  color: black;
   outline: none;
   border: none;
   cursor: pointer;
   font-size: 17px;
   border-radius: 4px;
-  background: blue;
+  background-color:slategray;
 }
 
 @media (max-width: 660px){
