--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>TECHYNOTES</title>
-    <link rel="icon" type="image/x-icon" href="static/images/icon.png">
+    <link rel="icon" type="image/x-icon" href="/static/images/icon.png">
     <link rel="stylesheet" href="/static/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
     <style>
             body{
-    background-image: url("static/images/wallpaper_1.jpg");
+    background-image: url("/static/images/44.avif");
     background-repeat: repeat;
     background-size:auto;
     }
