--- a/static/index.css
+++ b/static/index.css
@@ -69,7 +69,6 @@
   max-height: 165px;
   overflow-y: auto;
 }
-
 .note p{
   font-size: 22px;
   font-weight: 500;
@@ -215,13 +214,13 @@ form .row textarea{
 form button{
   width: 100%;
   height: 50px;
-  color: black;
+  color:navajowhite;
   outline: none;
   border: none;
   cursor: pointer;
   font-size: 17px;
   border-radius: 4px;
-  background-color:slategray;
+  background-color:tomato;
 }
 
 @media (max-width: 660px){
