--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
 
     <style>
             body{
-    background-image: url("/static/images/44.avif");
+    background-image: url("/static/images/14.jpg");
     background-repeat: repeat;
-    background-size:auto;
+    background-size: cover;
     }
     </style>
 
